# Embedded-XO-27

./: .gitignore  ButtonAnimation.cpp  ButtonAnimation.h  CMakeLists.txt  PasswordTextEdit.cpp  PasswordTextEdit.h  appicon.res  bry  hoverbutton.cpp  hoverbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordTextEdit.h  r.xlsx
.github/workflows/: main.yml
